<resources>
    <string name="app_name">SSDI_Microsoft_API</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="StringSubmit">Submit</string>
    <string name="StringCancel">Cancel</string>
    <string name="StringNewForum">New Forum</string>
    <string name="StringName">Name</string>
    <string name="StringLoginButton">Login</string>
    <string name="StringCreateNewAccounnt">Create New Account</string>
    <string name="StringEmail">Email</string>
    <string name="StringPassword">Password</string>
    <string name="UserComment">User Comment</string>
    <string name="Comment">Comment</string>
    <string name="MicrosoftAPIReport">Microsoft API Report</string>
    <string name="MonkeyAPIReport">Monkey API Report</string>
    <string name="Result">Result</string>
    <string name="WriteText">Write Text</string>
    <string name="History">History</string>
    <string name="PressToGetScore">Press To Get Score</string>
    <string name="Logout">LOGOUT</string>
    <string name="APPNAME">Welcome to Reviewer</string>

<!--    JAVA FIle String -->
    <string name="ToastWriteCommentValidation">Please write something before Submitting</string>
    <string name="ToastAPIResponse">Waiting For API Response </string>

    <string name="ToastAPILoading">API Loading </string>

</resources>