<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/frameLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/cloud"
android:padding="16dp"
tools:context=".CommentDetailHistoryFragment">

    <TextView
        android:id="@+id/textViewMicrosoftEachComment"
        android:layout_width="302dp"
        android:layout_height="138dp"
        android:layout_marginTop="64dp"
        android:text="@string/Result"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEachUserComment" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginBottom="32dp"
        android:text="@string/MicrosoftAPIReport"
        android:textColor="@color/black"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewMicrosoftEachComment"
        app:layout_constraintEnd_toEndOf="@+id/textViewMicrosoftEachComment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewMicrosoftEachComment" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="303dp"
        android:layout_height="31dp"
        android:layout_marginTop="9dp"
        android:text="@string/MonkeyAPIReport"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewMicrosoftEachComment"
        app:layout_constraintStart_toStartOf="@+id/textViewMicrosoftEachComment"
        app:layout_constraintTop_toBottomOf="@+id/textViewMicrosoftEachComment" />

    <TextView
        android:id="@+id/textViewMonkeyApiEachComment"
        android:layout_width="0dp"
        android:layout_height="146dp"
        android:text="@string/Result"
        android:textColorHint="#563C3C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewEachUserComment"
        android:layout_width="302dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:text="@string/Comment"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/UserComment"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewEachUserComment"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEachUserComment"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>